Fix layout issues, remove 'Sort by'-headers

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,7 @@
  *= require bootstrap
  *= require_tree .
  */
+
+.vertical-center{
+  vertical-align: middle !important;
+}
